tests/invalid/method_keyword_arg/main.py
s: str = "a,b,c"
parts: list[str] = s.split(sep=",")
